Bug 124923 - The iOS app built from the master branch gets stuck in the "Connecting..." phase
Summary: The iOS app built from the master branch gets stuck in the "Connecting..." phase
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: iOS Editor (show other bugs)
Version:
(earliest affected)
unspecified
Hardware: All iOS
: medium normal
Assignee: Not Assigned
URL:
Whiteboard: target:6.3.0
Keywords:
Depends on:
Blocks:
 
Reported: 2019-04-24 08:01 UTC by How can I remove my account?
Modified: 2019-04-24 11:23 UTC (History)
0 users

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description How can I remove my account? 2019-04-24 08:01:24 UTC
Description:
Debugging shows that there are two threads called "lo_startmain". That surely is a sign on something being very confused.

Steps to Reproduce:
.

Actual Results:
.

Expected Results:
.


Reproducible: Always


User Profile Reset: No



Additional Info:
.
Comment 1 How can I remove my account? 2019-04-24 08:35:45 UTC
If I experiment by setting the SAL_LOG_OPTIONS environment variable to "unipoll" when running the app from Xcode (to turn on the "Unipoll" thing, which the code in master in the online repo now apparently , I get a crash:

> #0	0x000000010cbfdd38 in std::__1::unique_ptr<comphelper::SolarMutex, std::__1::default_delete<comphelper::SolarMutex> >::get() const at /Applications/Xcode.app/Contents/Developer/Toolchains/XcodeDefault.xctoolchain/usr/include/c++/v1/memory:2621
> #1	0x000000010cbfdd14 in SalInstance::GetYieldMutex() at /Volumes/TML13/lo/ios-device/vcl/source/app/salvtables.cxx:109
> #2	0x000000010cc84160 in Application::GetSolarMutex() at /Volumes/TML13/lo/ios-device/vcl/source/app/svapp.cxx:537
> #3	0x0000000107a91ca0 in SolarMutexGuard::SolarMutexGuard() at /Volumes/TML13/lo/ios-device/include/vcl/svapp.hxx:1402
> #4	0x0000000107a82060 in SolarMutexGuard::SolarMutexGuard() at /Volumes/TML13/lo/ios-device/include/vcl/svapp.hxx:1402
> #5	0x00000001093f6470 in lo_runLoop(_LibreOfficeKit*, int (*)(void*, int), void (*)(void*), void*) at /Volumes/TML13/lo/ios-device/desktop/source/lib/init.cxx:4524
> #6	0x0000000104455278 in lok::Office::runLoop(int (*)(void*, int), void (*)(void*), void*) at /Volumes/TML13/lo/ios-device/include/LibreOfficeKit/LibreOfficeKit.hxx:841
> #7	0x00000001044544a4 in lokit_main(std::__1::basic_string<char, std::__1::char_traits<char>, std::__1::allocator<char> > const&, int) at /Volumes/TML13/lo/online-ios-device/kit/Kit.cpp:2549
> #8	0x000000010439c584 in getNewChild_Blocks(std::__1::basic_string<char, std::__1::char_traits<char>, std::__1::allocator<char> > const&)::$_0::operator()() const at /Volumes/TML13/lo/online-ios-device/wsd/LOOLWSD.cpp:518
> #9	0x000000010439c4d8 in decltype(std::__1::forward<getNewChild_Blocks(std::__1::basic_string<char, std::__1::char_traits<char>, std::__1::allocator<char> > const&)::$_0>(fp)()) std::__1::__invoke<getNewChild_Blocks(std::__1::basic_string<char, std::__1::char_traits<char>, std::__1::allocator<char> > const&)::$_0>(getNewChild_Blocks(std::__1::basic_string<char, std::__1::char_traits<char>, std::__1::allocator<char> > const&)::$_0&&) at /Applications/Xcode.app/Contents/Developer/Toolchains/XcodeDefault.xctoolchain/usr/include/c++/v1/type_traits:4339
> #10	0x000000010439c438 in void std::__1::__thread_execute<std::__1::unique_ptr<std::__1::__thread_struct, std::__1::default_delete<std::__1::__thread_struct> >, getNewChild_Blocks(std::__1::basic_string<char, std::__1::char_traits<char>, std::__1::allocator<char> > const&)::$_0>(std::__1::tuple<std::__1::unique_ptr<std::__1::__thread_struct, std::__1::default_delete<std::__1::__thread_struct> >, getNewChild_Blocks(std::__1::basic_string<char, std::__1::char_traits<char>, std::__1::allocator<char> > const&)::$_0>&, std::__1::__tuple_indices<>) at /Applications/Xcode.app/Contents/Developer/Toolchains/XcodeDefault.xctoolchain/usr/include/c++/v1/thread:342
> #11	0x000000010439bb50 in void* std::__1::__thread_proxy<std::__1::tuple<std::__1::unique_ptr<std::__1::__thread_struct, std::__1::default_delete<std::__1::__thread_struct> >, getNewChild_Blocks(std::__1::basic_string<char, std::__1::char_traits<char>, std::__1::allocator<char> > const&)::$_0> >(void*) at /Applications/Xcode.app/Contents/Developer/Toolchains/XcodeDefault.xctoolchain/usr/include/c++/v1/thread:352

pSVData->mpDefInst in Application::GetSolarMutex() is NULL.
Comment 2 How can I remove my account? 2019-04-24 09:10:26 UTC
If I add a call to InitVCL() in lo_runLoop(), to get pSVData->mpDefInst initialised, it gets a bit further, but still hangs showing the "Connecting..." spinner.
Comment 3 Commit Notification 2019-04-24 11:22:12 UTC
Tor Lillqvist committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/+/971cad365574267998e2a697441d42175ded61a3%5E%21

tdf#124923: Need to call InitVCL() on iOS before using SolarMutexGuard

It will be available in 6.3.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 4 Commit Notification 2019-04-24 11:22:19 UTC
Tor Lillqvist committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/+/6e246024c8b7ad3d8b953f92a2e5a01686f3a00e%5E%21

tdf#124923: Remove unneeded iOS ifdeffery

It will be available in 6.3.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 5 How can I remove my account? 2019-04-24 11:23:06 UTC
Seems to work now again, resolving.