tdf#124923: Need to call InitVCL() on iOS before using SolarMutexGuard

Change-Id: If5781ae101e58c26368e57787cb301f84ffa82a5