desktop/source/lib/init.cxx
@@ -4627,6 +4627,10 @@ static void lo_runLoop(LibreOfficeKit* /*pThis*/,
                        LibreOfficeKitWakeCallback pWakeCallback,
                        void* pData)
 {
+#ifdef IOS // Maybe ANDROID, too?
+    InitVCL();
+#endif
+
     SolarMutexGuard aGuard;
 
     vcl::lok::registerPollCallbacks(pPollCallback, pWakeCallback, pData);
